# MLflow_Light

./: .gitignore  README.md  fix_crlf.py
docs/: INSTRUCOES_AGENTES_IA.md  MLflow_Light_Manual.md  architecture.md  high_concurrency_guide.md  setup.md  usage_llm.md  usage_llm_judge.md  usage_ml.md  usage_spans.md
examples/: README.md  agent_example.py  llm_api_example.py  llm_judge_example.py  ml_model_example.py  node_example.mjs  rag_pipeline_example.py  test_trace.mjs
infrastructure/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/cloud_run/: main.tf
infrastructure/modules/cloud_sql/: main.tf
infrastructure/modules/cloud_storage/: main.tf
infrastructure/modules/networking/: main.tf
scripts/: Dockerfile_etl  cloudbuild.yaml  create_user.py  export_mlflow_to_gcs.py  generate_pdf.py  requirements_etl.txt
sdk/: README.md  pyproject.toml
sdk-node/: package-lock.json  package.json
sdk-node/src/: client.js  config.js  index.js  spans.js
sdk/light_mlflow/: __init__.py  config.py
sdk/light_mlflow/decorators/: __init__.py  base.py  llm_tracker.py  ml_model.py  spans.py
sdk/light_mlflow/evaluation/: __init__.py  llm_judge.py
sdk/light_mlflow/experiments/: registry.py
sdk/light_mlflow/utils/: __init__.py  artifacts.py  metrics.py
server/: Dockerfile  entrypoint.sh  requirements.txt
